2014-07-17  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_groups.php: added parameter to avoid the check
	the propagation in the function "groups_get_childrens".
	
	* include/functions_networkmap.php,
	operation/agentes/networkmap.php,
	operation/agentes/networkmap.topology.php: added feature to show the
	agents in subgroups (or not).
	
	INCIDENT: #1018

2014-07-14  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/admin_access_log.php
	  include/functions.php: Added export to csv.

	* godmode/audit_log_csv.php: Added file.

2014-07-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the call "set_update_agent"
	because before the call get the id_server but this data never
	was translated to name_server. And added id_server into the call
	"get_pandora_servers" in the last position.

2014-07-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: restored the parameter name server in
	the api call "set_new_agent", thanks KOSAKA.

2014-07-10  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_snmp_alert_field1.php: Updated help.

2014-07-09  Mario Pulido <mario.pulido@artica.es>

        * include/help/ja/help_snmp_alert_field1.php: Added macros snmp alert help

2014-07-09  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_snmp_alert_field1.php: Updated help.

2014-07-09  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_events.php, operation/events/events.php,
	operation/events/events_list.php: Replaced json_encode()
	with io_json_mb_encode() to avoid invalid encoding with multi-byte
	characters.

2014-07-08  Mario Pulido <mario.pulido@artica.es>

	* include/help/en/help_snmp_alert_field1.php,
	include/help/es/help_snmp_alert_field1.php: Change macros snmp alert help

2014-07-08 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Fixed that 'set enable_module'
	had not worked.

	MERGED FROM BRANCH 5.0

2014-07-07  Miguel de Dios <miguel.dedios@artica.es>
	