@@ -512,7 +512,11 @@ function ldap_process_user_login ($login, $password) {
 		}
 	}
 	
-	if (strlen($password) == 0 || !@ldap_bind ($ds, $config["ldap_login_attr"]."=".$login.",".$config["ldap_base_dn"], $password)) {
+	if (strlen($password) == 0 ||
+		!@ldap_bind($ds,
+			io_safe_output($config["ldap_login_attr"]) . "=" . $login . "," . io_safe_output($config["ldap_base_dn"]),
+			$password)) {
+		
 		$config["auth_error"] = 'User not found in database or incorrect password';
 		@ldap_close ($ds);
 		
