@@ -1,5 +1,12 @@
 2014-07-17  Miguel de Dios <miguel.dedios@artica.es>
 	
+	* include/auth/ldap.php, include/auth/mysql.php: fixed the
+	parameters with white spaces.
+	
+	INCIDENT: #1063
+
+2014-07-17  Miguel de Dios <miguel.dedios@artica.es>
+	
 	* include/functions_groups.php: added parameter to avoid the check
 	the propagation in the function "groups_get_childrens".
 	
